# xm3

./: README.md
sagt_admin/: pyproject.toml  run_sagt_admin  sagt_admin_app.py
sagt_admin/sagt_store_api/: sagt_store_api.py
sagt_admin/static/css/: style.css
sagt_admin/static/js/: common.js
sagt_admin/templates/: base.html  chat_records.html  customer_detail.html  customer_orders.html  employee_customers.html  employees.html  kf_records.html  login.html  tags.html
sagt_agent/: docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  run_sagt_agent  sagt.dockerfile
sagt_agent/src/auth/: auth.py
sagt_agent/src/graphs/sagt_graph/: sagt_graph.py  sagt_node.py  sagt_node_load_data.py  sagt_state.py
sagt_agent/src/graphs/sagt_graph/sagt_sub_graph_profile/: sub_profile_graph.py  (+2 more)
sagt_agent/src/llm/: llm_intent_detect.py  llm_just_talk.py  llm_setting.py  llm_suggest_chat.py  llm_suggest_kf_chat.py  llm_suggest_profile.py  llm_suggest_schedule.py  llm_suggest_tag.py
sagt_agent/src/models/: sagt_base_model.py  sagt_models.py
sagt_agent/src/store/: store_client.py
sagt_agent/src/tools/: store_tool.py  wechat_tool.py
sagt_agent/src/utils/: agent_logger.py  datetime_string.py  debug_aspect.py
sagt_agent/src/webapp/: webapp.py
sagt_agent/test/llm_test/: chat_suggest_test.py  intent_detect_test.py  just_talk_test.py  kf_chat_suggest_test.py  model_schema_test.py  profile_suggest_test.py  schedule_suggest_test.py  tag_suggest_test.py
sagt_client/: pyproject.toml
sagt_client/agent_client/: sagt_agent_test.py
sagt_client/store_client/: sagt_demo_init.py  sagt_store_api.py  sagt_store_test.py
sagt_client/store_client/data/: tag_setting.md  user_external_info.md  wxkf_msg.md  wxqy_msg.md  wxxd_order.md
sagt_sidebar/: pyproject.toml  run_sagt_sidebar  sagt_sidebar_app.py
sagt_sidebar/docs/: todo.md
sagt_sidebar/sagt_agent_api/: sagt_agent_api.py  sagt_agent_api_test.py
sagt_sidebar/sagt_web/: app.js  index.html  login.html  login.js  styles.css
(+13 files in other folders)
