[project]
name = "sagt-admin"
version = "0.1.0"
description = "Sagt 管理后台"
requires-python = "==3.12.*"
dependencies = [
    "flask==3.1.2",
    "langgraph-sdk==0.3.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
