[project]
name = "sagt-sidebar"
version = "0.1.0"
description = "Sagt 侧边栏项目"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.125.0",
    "langgraph==1.0.5",
    "langgraph-sdk==0.3.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "pytz==2025.2",
    "requests==2.32.5",
    "rich==14.2.0",
    "uvicorn==0.38.0",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true